--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ production:
   adapter: postgresql
   database: railway
   username: postgres
-  password: 3AfFq5FoVMRF5bP6zMX4
-  host: containers-us-west-18.railway.app
-  port: 6546
+  password: p9XJuP69IundY5dqF0Kn
+  host: containers-us-west-162.railway.app
+  port: 5616
   pool: 5
